--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
+h1 {
+  margin: 0;
+}
+
+p,
+h3 {
+  font-size: 1rem;
+  margin-top: 0;
+  margin-bottom: 0.3em;
+}
+
+p {
+  /* border-bottom: 2px solid black; */
+  padding-bottom: 0.6em;
+  margin-left: 2rem;
+}
+
+a {
+  color: #558779;
+  display: inline-block;
+  padding-bottom: 0.3em;
+  border-bottom: 2px solid #558779;
+  text-decoration: none;
+}
+a:hover {
+  color: black;
+  border-bottom: 2px solid black;
+}
 .App {
-  text-align: center;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App svg {
+  width: 100%;
+  height: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  line-height: 1;
+  font-size: 7vmax;
 }
 
-.App-link {
-  color: #61dafb;
+.App-text {
+  position: absolute;
+  width: 80%;
+  max-width: 17rem;
+  top: 17%;
+  right: 4%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-text--inner {
+  background-color: rgba(255, 255, 255, 0.97);
+  padding: 2rem;
+}
+
+html,
+body,
+#root,
+.App,
+.App-bg {
+  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
 }
